# nelpy

./: .gitignore  .nojekyll  404.html  AGENTS.md  LICENSE  README.md  README.rst  TODO.md  copy_tutorials.py  developnotes.md  gen_ref_pages.py  index.html  issues  mkdocs.yml  notes  objects.inv  pyproject.toml  setup-old.py  setup.cfg  setup.py  styleguide.rst  tags  todo
.github/: copilot-instructions.md
.github/instructions/: api-naming-conventions.instructions.md  bugfix-core-practices.instructions.md  development-setup-env.instructions.md  docs-maintenance.instructions.md  package-structure-reference.instructions.md  testing-pytest-helpers.instructions.md
.github/workflows/: ci.yml  deploy-docs.yml
conda-build/: meta.yaml
docs/: gen_ref_pages.py  index.md
docs/reference/: analysis.md  auxiliary.md  core.md  decoding.md  estimators.md  filtering.md  hmmutils.md  plotting.md  preprocessing.md  utils.md
docs/stylesheets/: extra.css
examples/: EpochArrayDemo.ipynb  EventArrayDemo.ipynb  Playground-SD.ipynb  Playground.ipynb  Ting-mua.ipynb  demo.ipynb  develop.ipynb  homography-w.pts  load_from_sd.ipynb  nelpy-examples.ipynb  playground.ipynb  plotting.ipynb  tutorial-emily.ipynb  tutorial-etienne.ipynb  tutorial.ipynb
hmmlearn/: hmmlearn-0.2.0-cp35-cp35m-win_amd64.whl
nelpy/: __init__.py  all.py  bayesian.py  decoding.py  decoding2d.py  estimators.py  filtering.py  formatters.py  hmmutils.py  homography.py  io.py  ipynb.py  min.py  nelpydev  nepstuff.py  objects.py  plotting.py  preprocessing.py  scoring.py  temp.py  trodes.py  utils.py  version.py
nelpy/analysis/: __init__.py  ergodic.py  hmm_sparsity.py  replay.py
nelpy/auxiliary/: __init__.py  _animal.py  _experiment.py  _imu.py  _position.py  _results.py  _session.py  _tuningcurve.py
nelpy/contrib/: _ringlike.py  octagon_maze.py  octagonal.py
nelpy/core/: __init__.py  _accessors.py  _analogsignalarray.old.py  _analogsignalarray.py  _coordinates.py  _epocharray.old.py  _epocharray.py  _eventarray.py  _intervalarray.py  _spiketrain.old.py  (+2 more)
nelpy/core-legacy/: __init__.py  _analogsignalarray-legacy.py  _epocharray.py  _eventarray.py  _grouping.py  _spiketrain.py  _statearray.py
search/: search_index.json
stylesheets/: extra.css
temp/: circstats.py  datapackage.py  frank_lab.py  hc3.py  klabtools.py  mymap.py  placefieldviz.py  ripple.py  safemath.py  seqtools.py  stats.py
tests/: test_AnalogSignalArray.py  test_EpochArray.py  test_EventArray.py  test_IntervalArray.py  test_PrettyDuration.py  test_SpikeTrainArray_etienne.py  test_ValueEventArray.py  test_decoding.py  test_ergodic.py  test_estimators.py  test_etienne.py  test_filtering.py  test_formatters.py  test_gaussian_filter.py  test_halfopen.py  test_logging_filtering.py  test_nelpy.py  test_objects.py  test_pickle_compat.py  test_plotting_core.py  test_preprocessing.py  test_replay.py  test_tuningcurve.py  test_utils.py
tutorials/: BackyardBrainsEEG.ipynb  EpochArrayTutorial.ipynb  GettingStarted.ipynb  LinearTrackDemo.ipynb  SpikeTrainSmoothing.ipynb  WMazeDemo.ipynb  develop.ipynb  plotting.ipynb
(+125 files in other folders)
